CruiseControl Release Notes

Changes listed by release, then alphabetically.

CruiseControl Release Notes - 2.7.1-RC2

build loop
======================

SVN
----------------------
* Fixed CC-683 : svnrevision property set incorrectly. Patch by Tim Brown and Brian Egge.
* Fixed CC-678 : svnbootstrapper documentation incorrectly lists "checkExternals" flag. Must be moved to the "svn" modificationset element. Reported by Ram Singaram

cc-config
======================
* Fixed CC-684 : cc-config\3rdparty\libsystray4j.so causes build to break on Windows. Use v1.7final cc-config jar. Patch by Brian Egge.

dashboard
======================
NOTE: The dashboard has known display issues in Internet Explorer 6.
* Allowed artifacts to be shown and downloaded in case of a failed build
* Allowed project name to contain hyphen (-)
* Allowed integration with project management tools
* Allowed using dashboard-config.xml to configure the dashboard
* Deprecated the way to configure the dashboard via web.xml
* Applied the patch of CC-436 which committed by Szczepan Faber
* Fixed CC-656 : Compound Publisher
* Fixed CC-665 : error details are missing in the dashboard
* Fixed CC-670 : Dashboard can't parse logfiles with testsuite elements without time attribute
* Fixed CC-671 : Dashboard can't parse logfiles with non-default date formats


CruiseControl Release Notes - 2.7.1-RC1

contrib
======================

packager
----------------------
* Fix build root and rpm destination for rpm target. Patch by Joseph Benavidez.
* Init script improvments based on patch by Nicolas Ternisien
* Upgrading a package will no longer overwrite users config
* Packages now depend on Java and subversion
* Package now includes dashboard and cc-config
* Now includes working connectfour sample
* Stops CruiseControl on uninstall
* Now only builds CruiseControl if needed

Documentation
======================
* Added docs for the Darcs scm plugin (CC-626).